# serializer version: 1
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_black_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_black_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Black level',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Black level',
    'platform': 'hp_printer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'black_level',
    'unique_id': 'TH12A3B4CD_K_level',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_black_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HP OfficeJet Pro 9020 series Black level',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_black_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '80.0',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_copied_pages-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_copied_pages',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Copied pages',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Copied pages',
    'platform': 'hp_printer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'copied_pages',
    'unique_id': 'TH12A3B4CD_copied_pages',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_copied_pages-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HP OfficeJet Pro 9020 series Copied pages',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_copied_pages',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_cyan_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_cyan_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cyan level',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Cyan level',
    'platform': 'hp_printer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cyan_level',
    'unique_id': 'TH12A3B4CD_C_level',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_cyan_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HP OfficeJet Pro 9020 series Cyan level',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_cyan_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '40.0',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_faxed_pages-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_faxed_pages',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Faxed pages',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Faxed pages',
    'platform': 'hp_printer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'faxed_pages',
    'unique_id': 'TH12A3B4CD_faxed_pages',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_faxed_pages-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HP OfficeJet Pro 9020 series Faxed pages',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_faxed_pages',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_magenta_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_magenta_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Magenta level',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Magenta level',
    'platform': 'hp_printer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'magenta_level',
    'unique_id': 'TH12A3B4CD_M_level',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_magenta_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HP OfficeJet Pro 9020 series Magenta level',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_magenta_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '40.0',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_paper_jams-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_paper_jams',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Paper jams',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Paper jams',
    'platform': 'hp_printer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'jams',
    'unique_id': 'TH12A3B4CD_jams',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_paper_jams-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HP OfficeJet Pro 9020 series Paper jams',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_paper_jams',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_paper_mispicks-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_paper_mispicks',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Paper mispicks',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Paper mispicks',
    'platform': 'hp_printer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'mispicks',
    'unique_id': 'TH12A3B4CD_mispicks',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_paper_mispicks-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HP OfficeJet Pro 9020 series Paper mispicks',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_paper_mispicks',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '24',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_printed_black_and_white_pages-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_printed_black_and_white_pages',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Printed black and white pages',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Printed black and white pages',
    'platform': 'hp_printer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'monochrome_pages',
    'unique_id': 'TH12A3B4CD_monochrome_pages',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_printed_black_and_white_pages-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HP OfficeJet Pro 9020 series Printed black and white pages',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_printed_black_and_white_pages',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '226',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_printed_color_pages-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_printed_color_pages',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Printed color pages',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Printed color pages',
    'platform': 'hp_printer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'color_pages',
    'unique_id': 'TH12A3B4CD_color_pages',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_printed_color_pages-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HP OfficeJet Pro 9020 series Printed color pages',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_printed_color_pages',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '649',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_printed_double_sided_sheets-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_printed_double_sided_sheets',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Printed double-sided sheets',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Printed double-sided sheets',
    'platform': 'hp_printer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'duplex_sheets',
    'unique_id': 'TH12A3B4CD_duplex_sheets',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_printed_double_sided_sheets-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HP OfficeJet Pro 9020 series Printed double-sided sheets',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_printed_double_sided_sheets',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '83',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_printed_pages-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_printed_pages',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Printed pages',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Printed pages',
    'platform': 'hp_printer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'total_pages',
    'unique_id': 'TH12A3B4CD_total_pages',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_printed_pages-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HP OfficeJet Pro 9020 series Printed pages',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_printed_pages',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '875',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_printed_single_sided_sheets-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_printed_single_sided_sheets',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Printed single-sided sheets',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Printed single-sided sheets',
    'platform': 'hp_printer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'simplex_sheets',
    'unique_id': 'TH12A3B4CD_simplex_sheets',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_printed_single_sided_sheets-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HP OfficeJet Pro 9020 series Printed single-sided sheets',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_printed_single_sided_sheets',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '697',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_scanned_double_sided_sheets-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_scanned_double_sided_sheets',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scanned double-sided sheets',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scanned double-sided sheets',
    'platform': 'hp_printer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'scanned_duplex_sheets',
    'unique_id': 'TH12A3B4CD_scanned_duplex_sheets',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_scanned_double_sided_sheets-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HP OfficeJet Pro 9020 series Scanned double-sided sheets',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_scanned_double_sided_sheets',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '589',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_scanned_pages-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_scanned_pages',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scanned pages',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scanned pages',
    'platform': 'hp_printer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'scanned_pages',
    'unique_id': 'TH12A3B4CD_scanned_pages',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_scanned_pages-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HP OfficeJet Pro 9020 series Scanned pages',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_scanned_pages',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4279',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_scanned_pages_from_document_feeder-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_scanned_pages_from_document_feeder',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scanned pages from document feeder',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scanned pages from document feeder',
    'platform': 'hp_printer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'scanned_adf_pages',
    'unique_id': 'TH12A3B4CD_scanned_adf_pages',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_scanned_pages_from_document_feeder-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HP OfficeJet Pro 9020 series Scanned pages from document feeder',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_scanned_pages_from_document_feeder',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2947',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_scanned_pages_from_glass-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_scanned_pages_from_glass',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scanned pages from glass',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scanned pages from glass',
    'platform': 'hp_printer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'scanned_flatbed_pages',
    'unique_id': 'TH12A3B4CD_scanned_flatbed_pages',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_scanned_pages_from_glass-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HP OfficeJet Pro 9020 series Scanned pages from glass',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_scanned_pages_from_glass',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1310',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_scanner_jams-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_scanner_jams',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scanner jams',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scanner jams',
    'platform': 'hp_printer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'scanner_jams',
    'unique_id': 'TH12A3B4CD_scanner_jams',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_scanner_jams-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HP OfficeJet Pro 9020 series Scanner jams',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_scanner_jams',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '11',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_scanner_mispicks-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_scanner_mispicks',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Scanner mispicks',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Scanner mispicks',
    'platform': 'hp_printer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'scanner_mispicks',
    'unique_id': 'TH12A3B4CD_scanner_mispicks',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_scanner_mispicks-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HP OfficeJet Pro 9020 series Scanner mispicks',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_scanner_mispicks',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '6',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'cancel_job',
        'copying',
        'in_power_save',
        'off',
        'processing',
        'ready',
        'scan_processing',
        'tray_empty',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Status',
    'platform': 'hp_printer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'status',
    'unique_id': 'TH12A3B4CD_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HP OfficeJet Pro 9020 series Status',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'cancel_job',
        'copying',
        'in_power_save',
        'off',
        'processing',
        'ready',
        'scan_processing',
        'tray_empty',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'in_power_save',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_yellow_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_yellow_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Yellow level',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Yellow level',
    'platform': 'hp_printer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'yellow_level',
    'unique_id': 'TH12A3B4CD_Y_level',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor.hp_officejet_pro_9020_series_yellow_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HP OfficeJet Pro 9020 series Yellow level',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.hp_officejet_pro_9020_series_yellow_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '40.0',
  })
# ---
